static/docs/user/1.0/_sources/cli/apptainer_key_newpair.rst.txt
.. _apptainer_key_newpair:

apptainer key newpair
---------------------

Create a new key pair

Synopsis
~~~~~~~~



  The 'key newpair' command allows you to create a new key or public/private
  keys to be stored in the default user local keyring location (e.g., 
  $HOME/.apptainer/keys).

::

  apptainer key newpair

Examples
~~~~~~~~

::


    $ apptainer key newpair
    $ apptainer key newpair --password=psk --name=your-name --comment="key comment" --email=mail@email.com --push=false

Options
~~~~~~~

::

  -b, --bit-length int    specify key bit length (default 4096)
  -C, --comment string    key comment
  -E, --email string      key owner email
  -h, --help              help for newpair
  -N, --name string       key owner name
  -P, --password string   key password
  -U, --push              specify to push the public key to the remote keystore

SEE ALSO
~~~~~~~~

* :ref:`apptainer key <apptainer_key>` 	 - Manage OpenPGP keys

*Auto generated by spf13/cobra on 16-Mar-2022*
